fix overflow in grid class

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 
 img {
@@ -51,7 +52,7 @@ body {
   color: var(--text-color);
   background: var(--body-color);
   -webkit-font-smoothing: antialiased;
-  overflow-x: hidden;
+  
 }
 
 .title {
@@ -108,6 +109,7 @@ body {
 .grid {
   display: grid;
   gap: 2rem;
+  width: auto;
 }
 
 .section {
@@ -537,6 +539,10 @@ footer .social a:hover {
   opacity: 1;
   transform: translateY(0);
 }
+
+
+
+
 
 /* ========= RESPONSIVE (MEDIA QUERIES) =========*/
 /*extra large devices >=1200*/
